2008-12-02  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=22472

        Override absoluteClippedOverflowRect() in RenderReplaced to return a rect
        that is large enough to encompass the selection, so that the repainting of
        selected replaced elements works correctly.

        Test: fast/repaint/selected-replaced.html

        * rendering/RenderReplaced.cpp:
        (WebCore::RenderReplaced::selectionRect):
        (WebCore::RenderReplaced::localSelectionRect):
        (WebCore::RenderReplaced::absoluteClippedOverflowRect):
        * rendering/RenderReplaced.h:

Canonical link: https://commits.webkit.org/31129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38922 268f45cc-cd09-0410-ab3c-d52691b4dbfc