WebCore/rendering/RenderReplaced.h
@@ -53,6 +53,8 @@ public:
     virtual int overflowTop(bool includeInterior = true) const;
     virtual IntRect overflowRect(bool includeInterior = true) const;
 
+    virtual IntRect absoluteClippedOverflowRect();
+
     virtual unsigned caretMaxRenderedOffset() const;
     virtual VisiblePosition positionForCoordinates(int x, int y);
     
@@ -71,6 +73,7 @@ protected:
 
     bool shouldPaint(PaintInfo&, int& tx, int& ty);
     void adjustOverflowForBoxShadow();
+    IntRect localSelectionRect(bool checkWhetherSelected = true) const;
 
 private:
     IntSize m_intrinsicSize;
